# NetworkClipboard

./: .gitignore  README.md
AndroidServer/: AndroidManifest.xml  CMakeLists.txt  README.md
AndroidServer/qml/: Main.qml
AndroidServer/res/mipmap/: ic_launcher.xml
AndroidServer/src/: AndroidServerController.cpp  AndroidServerController.h  ApiServer.cpp  ApiServer.h  ClipboardEntry.cpp  ClipboardEntry.h  ClipboardStore.cpp  ClipboardStore.h  main.cpp
AndroidServer/src/org/qtproject/example/NetworkClipboardAndroidServer/: ImageClipboardHelper.java  NetworkClipboardForegroundService.java  NetworkClipboardImageProvider.java
android/: AndroidManifest.xml  CMakeLists.txt  build.gradle
android/qml/: Main.qml
android/qml-stubs/QtQuick/Controls/Windows/: qmldir
android/qml-stubs/QtQuick/Controls/iOS/: qmldir
android/qml-stubs/QtQuick/Controls/macOS/: qmldir
android/res/drawable/: ic_launcher.xml
android/src/: ClipboardBridge.cpp  ClipboardBridge.h  NetworkClipboardClient.cpp  NetworkClipboardClient.h  main.cpp
android/src/org/qtproject/example/NetworkClipboardAndroid/: ImageClipboardHelper.java  NetworkClipboardActivity.java  NetworkClipboardImageProvider.java  NetworkDiscoveryHelper.java
docs/: api.md
icons/ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/: CMakeLists.txt  Info.plist.in
ios/qml/: Main.qml
ios/src/: ClipboardBridge.cpp  ClipboardBridge.h  ClipboardBridge.mm  NetworkClipboardClient.cpp  NetworkClipboardClient.h  main.cpp
macos/: CMakeLists.txt  Info.plist.in  README.md  resources.qrc
macos/src/: ApiServer.cpp  ApiServer.h  ClipboardContentWindow.h  ClipboardEntry.cpp  ClipboardStore.cpp  ClipboardStore.h  MacServerController.cpp  MacServerController.h  main.cpp
windows/: CMakeLists.txt
windows/installer/: NetworkClipboardServer.iss  README.md
windows/src/: ApiServer.cpp  ApiServer.h  ClipboardContentWindow.cpp  ClipboardEntry.cpp  ClipboardEntry.h  ClipboardStore.cpp  ClipboardStore.h  TrayController.cpp  TrayController.h  main.cpp  service_main.cpp
